--- a/src/style/ui/_article.scss
+++ b/src/style/ui/_article.scss
@@ -11,7 +11,8 @@
   margin-bottom: 2rem;
 
   .ingress {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
+    font-weight: 500;
   }
   img {
     width: 100%;
